# State-Claw-Research

./: NOTICE.md  README.md  docker-compose.yml  package.json  pnpm-workspace.yaml
apps/ingestion-worker/: Dockerfile  README.md  pyproject.toml
apps/ingestion-worker/src/agentic_law_os_ingestion/: __init__.py  __main__.py  chunker.py  cli.py  config.py  db.py  hashing.py  logging.py  normalization.py  worker.py
apps/ingestion-worker/src/agentic_law_os_ingestion/embedders/: __init__.py  voyage_embedder.py
apps/ingestion-worker/src/agentic_law_os_ingestion/parsers/: __init__.py  docling_parser.py
apps/ingestion-worker/src/agentic_law_os_ingestion/sources/: __init__.py  base.py  california.py
company-context/: README.md  company.yaml  fact-pattern.md  factual-baseline.md  high-risk-jurisdictions.yaml  risk-taxonomy.yaml  risk-vectors.yaml  terminology.yaml  verb-principle.yaml
migrations/: 0001_init.sql  README.md
rules/: R1.SourceAllowlist.md  R10.CurrencyTag.md  R11.LowConfidenceGate.md  R12.ClassificationOverlay.md  R13.VerifyFlagCap.md  R14.NoLawFirmCitation.md  R15.CompletenessGate.md  R2.JurisdictionLock.md  R3.NoMemoryStatutes.md  R4.QuotingRule.md  R5.HashEcho.md  R6.PinpointCite.md  R7.RegSearchOnDelegation.md  R8.CrossRefTrace.md  R9.DefinitionsFirst.md  README.md  W1.PartialAcrossStates.md  W2.ParaphraseDriftCheck.md  W3.HedgeDensity.md  W4.CanonConflictDeclared.md
schemas/: README.md  _defs.schema.json  citation.schema.json  claim-ledger.schema.json  claim.schema.json  classification-output.schema.json  completeness-output.schema.json  (+5 more)
(+82 files in other folders)
